# schwerdt-lab-to-nwb

./: .gitignore  LICENSE  README.md  dandi.md  frozen_requirements.txt  make_env.yml  pyproject.toml
.github/workflows/: test-install.yml
src/schwerdt_lab_to_nwb/amjad_2025/: __init__.py  behaviorinterface.py  conversion_notes.md  convert_all_sessions.py  convert_session.py  metadata.yaml  nwbconverter.py  session_map.yaml  upload_sessions_to_dandi.py
src/schwerdt_lab_to_nwb/choi_2025/: behaviorinterface.py  conversion_notes.md  convert_all_sessions.py  convert_session.py  metadata.yaml  nwbconverter.py  session_map.yaml  upload_sessions_to_dandi.py
src/schwerdt_lab_to_nwb/conversion/: __init__.py  convert_session.py  dataset_to_nwb.py
src/schwerdt_lab_to_nwb/converters/: __init__.py  nwbconverter.py
src/schwerdt_lab_to_nwb/interfaces/: __init__.py  behavior_interface.py  eye_tracking_interface.py  fscv_interface.py  lfp_interface.py  neuralynx_gap_mode_interface.py  trial_aligned_fscv_interface.py  trials_interface.py  waveform_interface.py
src/schwerdt_lab_to_nwb/tutorials/: chambers_ephys_fscv_nwb_tutorial.ipynb  final_meeting_nwb_tutorial.ipynb  microinvasive_probes_ephys_nwb_tutorial.ipynb  microinvasive_probes_fscv_nwb_tutorial.ipynb
src/schwerdt_lab_to_nwb/utils/: __init__.py  utils.py
